# django-auction

./: .gitignore  .travis.yml  README.rst  pyproject.toml  requirements.txt  setup.py
auction/: admin.py  urls.py  views.py
auction/migrations/: 0001_initial.py
auction/models/: auctionmodel.py
auction/tests/: runtests.py
auction/utils/: generic.py  loader.py
