[tool.poetry]
name = "django-auction"
version = "0.1.0"
description = ""
authors = ["John Romanski <382382+JohnRomanski@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
django-polymorphic = "^3.0.0"

[tool.poetry.dev-dependencies]
django-nose = "^1.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
